--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset='utf-8'/>
+    <link rel='stylesheet' href='normalize.css'/>
     <title>MARCELO NOGUEIRA DOS SANTOS</title>
   </head>
 
